@@ -5,6 +5,6 @@
 . $srcdir/defs || exit 1
 
 : > Makefile.am
-rm install-sh
+rm -f install-sh
 
 $AUTOMAKE -c -a
