@@ -5,7 +5,7 @@
 
 . $srcdir/defs || exit 1
 
-rm mkinstalldirs
+rm -f mkinstalldirs
 
 : > Makefile.am
 
