@@ -7,7 +7,7 @@
 . $srcdir/defs || exit 1
 
 : > Makefile.am
-rm install-sh
+rm -f install-sh
 
 # Since the default path includes '../..', we must run this test in
 # yet another subdir.
