@@ -5,8 +5,8 @@
 
 . $srcdir/defs || exit 1
 
-rm install-sh
-rm mkinstalldirs
+rm -f install-sh
+rm -f mkinstalldirs
 
 : > Makefile.am
 
