@@ -4,8 +4,8 @@
 
 . $srcdir/defs || exit 1
 
-rm install-sh
-rm mkinstalldirs
+rm -f install-sh
+rm -f mkinstalldirs
 ln -s Zardoz mkinstalldirs
 
 : > Makefile.am
