@@ -1,5 +1,15 @@
 2001-03-05  Pavel Roskin  <proski@gnu.org>
 
+	* tests/copy.test: Never use `rm' without `-f' - it may ask
+	questions, notably for read-only files during `make distcheck'.
+	* tests/insh.test: Likewise.
+	* tests/installsh.test: Likewise.
+	* tests/symlink.test: Likewise.
+	* tests/symlink2.test: Likewise.
+	* tests/symlink3.test: Likewise.
+
+2001-03-05  Pavel Roskin  <proski@gnu.org>
+
 	* noinstdir.test: New test.
 	* tests/Makefile.am (TESTS): Add noinstdir.test.
 	(XFAIL_TESTS): Likewise.
